--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
+#H2 database
 spring.h2.console.enabled=true
+
+#datasource
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:Student
+
+#jpa
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#server
+server.port=8090
