Implemented logging using logback and added sonar-project.properties file for code analysis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #server
-server.port=8090
+
+#logging
+logging.level.root=info
+logging.level.com.pegs.StudentManagementApp=trace
+logging.file.path=logs
+
