minor code changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ logging.level.root=info
 logging.level.com.pegs.StudentManagementApp=trace
 logging.file.path=logs
 
+#Redis -Configuraion
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+
